1.7.4: Fixed height stretching, added composer.json for October CMS v2

--- a/formwidgets/editorjs/assets/css/editor.css
+++ b/formwidgets/editorjs/assets/css/editor.css
@@ -9,3 +9,9 @@
     border-radius: 3px;
     padding: 20px 0;
 }
+
+.editorjs-wrapper,
+.editorjs-wrapper .codex-editor,
+.editorjs-wrapper .codex-editor .codex-editor__redactor{
+    height: 100%;
+}
